# CHIP-8

./: .gitignore  CMakeLists.txt  README.md
src/: chip8.c  chip8.h  instructions.c  instructions.h  main.c  platform.c  platform.h
